Fix layout bug.

--- a/site/style.css
+++ b/site/style.css
@@ -89,7 +89,7 @@ a:hover {
 }
 
 .sample-code {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 }
 
 @media (min-width: 600px) {
